@@ -2,20 +2,19 @@ package com.honeybadgersoftware.availability.service.impl;
 
 import com.honeybadgersoftware.availability.component.decorator.AvailabilityEntityDecorator;
 import com.honeybadgersoftware.availability.model.dto.ProductPriceData;
-import com.honeybadgersoftware.availability.model.request.UpdateAvailabilityRequest;
 import com.honeybadgersoftware.availability.model.entity.AvailabilityEntity;
+import com.honeybadgersoftware.availability.model.request.UpdateAvailabilityRequest;
 import com.honeybadgersoftware.availability.repository.AvailabilityRepository;
-import com.honeybadgersoftware.availability.service.AvailabilityService;
+import com.honeybadgersoftware.availability.service.AvailabilityUpdateService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class UpdateAvailabilityServiceImpl implements AvailabilityService {
+public class AvailabilityUpdateServiceImpl implements AvailabilityUpdateService {
 
     private final AvailabilityRepository availabilityRepository;
     private final AvailabilityEntityDecorator availabilityEntityDecorator;
@@ -36,7 +35,7 @@ public class UpdateAvailabilityServiceImpl implements AvailabilityService {
 
     private List<Long> updateAvailabilityDataForExistingProducts(List<ProductPriceData> data, Long shopId) {
         return updateAvailabilityDatabase(data, shopId).stream()
-                .map(AvailabilityEntity::getProductId).collect(Collectors.toList());
+                .map(AvailabilityEntity::getProductId).toList();
     }
 
     private List<AvailabilityEntity> updateAvailabilityDatabase(List<ProductPriceData> productPriceData, Long shopId) {
@@ -46,14 +45,14 @@ public class UpdateAvailabilityServiceImpl implements AvailabilityService {
                 shopId);
 
         List<AvailabilityEntity> updatedEntities = existingEntities.stream()
-                .peek(existingEntity -> productPriceData.stream()
+                .peek(existingEntity -> productPriceData.stream()     //NOSONAR
                         .filter(updateData -> matchEntityWithAvailabilityData.test(updateData, existingEntity))
                         .findFirst().ifPresent(
                                 correspondingUpdateData ->
                                         availabilityEntityDecorator.decorate(
                                                 correspondingUpdateData.getPrice(),
                                                 existingEntity)))
-                .collect(Collectors.toList());
+                .toList();
 
         return availabilityRepository.saveAll(updatedEntities);
     }
